syntax = "proto3";
option csharp_namespace = "Phorkus.Proto";

import "default.proto";
import "transaction.proto";
import "block.proto";
import "consensus.proto";
import "node.proto";

message HandshakeRequest {
    Node node = 1;
}

message HandshakeReply {
    Node node = 1;
}

message PingRequest {
    uint64 timestamp = 1;
}

message PingReply {
    uint64 timestamp = 1;
}

message GetBlocksByHashesRequest {
    repeated UInt256 block_hashes = 1;
}

message GetBlocksByHashesReply {
    repeated Block blocks = 1;
}

message GetBlocksByHeightRangeRequest {
    uint64 from_height = 1;
    uint64 to_height = 2;
}

message GetBlocksByHeightRangeReply {
    repeated UInt256 block_hashes = 1;
}

message GetTransactionsByHashesRequest {
    repeated UInt256 transaction_hashes = 1;
}

message GetTransactionsByHashesReply {
    repeated SignedTransaction transactions = 1;
}

message GetTransactionHashesByBlockHeightRequest {
    uint64 block_height = 1;
}

message GetTransactionHashesByBlockHeightReply {
    repeated UInt256 transaction_hashes = 1;
}

message NetworkMessage {
    oneof message {
        HandshakeRequest handshake_request = 1;
        HandshakeReply handshake_reply = 2;
        GetBlocksByHashesRequest get_blocks_by_hashes_request = 3;
        GetBlocksByHashesReply get_blocks_by_hashes_reply = 4;
        GetBlocksByHeightRangeRequest get_blocks_by_height_range_request = 5;
        GetBlocksByHeightRangeReply get_blocks_by_height_range_reply = 6;
        GetTransactionsByHashesRequest get_transactions_by_hashes_request = 7;
        GetTransactionsByHashesReply get_transactions_by_hashes_reply = 8;
    }
}